--- a/New Project/react-crud/src/css/main.css
+++ b/New Project/react-crud/src/css/main.css
@@ -26,8 +26,7 @@ body{
     width: 25%;
     height: 50px;
     background: #FFFFFF;
-    border-radius: 10px;
-    
+    border-radius: 10px; 
     margin-bottom: 45px;
     border: none;
     padding-left: 20px;
@@ -53,7 +52,7 @@ body{
     
 }
 
-form,.search{
+.search{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,7 +60,7 @@ form,.search{
 }
 
 a{
-    margin-top: 47px;
+    margin-bottom: 45px;
 }
 
 .rbtn{
@@ -88,8 +87,7 @@ a{
 }
 
 .check{
-    margin-top: 20px;
-    margin-bottom:-20px;
+    margin-bottom:20px;
     display: flex;
     text-align: left;
     flex-direction: row;
