--- a/New Project/react-crud/src/css/header.css
+++ b/New Project/react-crud/src/css/header.css
@@ -1,21 +1,30 @@
 .header{
-    margin-top: 5%;
-    margin-bottom: 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    text-align: center;
     padding: 0px;
     
+} 
+
+#headerId{
+    background: white;
+    margin-bottom: 2%;
+    box-shadow: 0px 3px 3px silver;
 }
+
+
 .right{
-    text-align: end;
+    text-align: center;
 }
 
 
 
 @media only screen and (max-width: 768px) {
     .header{
-        margin-top: 40%;
-        margin-bottom: -5%;
+        margin-top: 20%;
+        margin-bottom: 10%;
+    }
+    #headerId{
+        margin-bottom: 10%;
     }
 }
