--- a/New Project/react-crud/src/css/list.css
+++ b/New Project/react-crud/src/css/list.css
@@ -1,6 +1,3 @@
-body{
-    background: linear-gradient(90deg, #00DBDE 0%, rgba(35, 245, 195, 0.87) 100%);
-}
 .prop{
     margin-top: 0px;
     width: 78%;
@@ -9,6 +6,7 @@ body{
     border-radius: 10px;
     border: none;
     padding-left: 20px;
+    box-shadow: 0px 3px 3px silver;
 }
 .emplist{
     margin-top: 20px;
@@ -17,6 +15,7 @@ body{
     height: 50px;
     width: 18%;
     margin-left: 10px;
+    border-radius: 10px;
 }
 .listbtn{
     margin: 1px;
@@ -40,7 +39,7 @@ li{
 .list-group-item{
     margin: 2px;
     transition: 0.2s;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 .list-group-item:hover{
     background-color: teal;
@@ -49,5 +48,7 @@ li{
 
 .details{
     background-color: white; 
+    border-radius: 10px;
     padding: 2%;
+    box-shadow: 0px 3px 3px silver;
 }
