--- a/New Project/react-crud/src/css/main.css
+++ b/New Project/react-crud/src/css/main.css
@@ -3,7 +3,9 @@
     padding: 0px;
 }
 body{
-    background: linear-gradient(90deg, #00DBDE 0%, rgba(35, 245, 195, 0.87) 100%);
+    
+    background: linear-gradient( #f5f5f5,#f5f5f5);
+    
 }
 
 .prop{
@@ -30,6 +32,7 @@ body{
     margin-bottom: 45px;
     border: none;
     padding-left: 20px;
+    box-shadow: 0px 3px 3px silver;
 }
 
 
@@ -44,6 +47,7 @@ body{
     margin-bottom: 45px;
     border: none;
     transition: 0.2s;
+    
 }
 
 .btnsubmit:hover{
@@ -94,15 +98,14 @@ a{
     
 }
 .tabs{
-    background-color:dodgerblue;
+    
     width: 150px;
     height: 30px;
     margin-bottom: 20px;
-    border-radius: 10px;
     border: none;
     transition: 0.2s;
     color: white;
-    border: solid 2px white;
+    
 }
 .adashboard{
     text-align: center;
@@ -126,5 +129,8 @@ a{
     }
     .small,.btnsubmit{
         width: 80%;
+    }
+    .tabs{
+        width: 120px;
     }
 }
