--- a/New Project/react-crud/src/css/main.css
+++ b/New Project/react-crud/src/css/main.css
@@ -3,9 +3,7 @@
     padding: 0px;
 }
 body{
-    
-    background: linear-gradient( #f5f5f5,#f5f5f5);
-    
+    background: linear-gradient(90deg, #00DBDE 0%, rgba(35, 245, 195, 0.87) 100%);
 }
 
 .prop{
@@ -32,7 +30,6 @@ body{
     margin-bottom: 45px;
     border: none;
     padding-left: 20px;
-    box-shadow: 0px 3px 3px silver;
 }
 
 
@@ -47,7 +44,6 @@ body{
     margin-bottom: 45px;
     border: none;
     transition: 0.2s;
-    
 }
 
 .btnsubmit:hover{
@@ -98,14 +94,15 @@ a{
     
 }
 .tabs{
-    
-    width: 140px;
+    background-color:dodgerblue;
+    width: 150px;
     height: 30px;
     margin-bottom: 20px;
+    border-radius: 10px;
     border: none;
     transition: 0.2s;
     color: white;
-    
+    border: solid 2px white;
 }
 .adashboard{
     text-align: center;
@@ -129,8 +126,5 @@ a{
     }
     .small,.btnsubmit{
         width: 80%;
-    }
-    .tabs{
-        width: 125px;
     }
 }
