--- a/New Project/react-crud/src/css/list.css
+++ b/New Project/react-crud/src/css/list.css
@@ -7,7 +7,7 @@
     border: none;
     padding-left: 20px;
     box-shadow: 0px 3px 3px silver;
-}
+} 
 .emplist{
     margin-top: 20px;
 }
@@ -51,4 +51,12 @@ li{
     border-radius: 10px;
     padding: 2%;
     box-shadow: 0px 3px 3px silver;
+}
+@media only screen and (max-width: 768px) {
+    .prop{
+        width: auto;
+    }
+    .searchbtn{
+        width: auto;
+    }
 }
